tests/machine/x/go/group_by_multi_join_sort.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join_sort.go:16:14: undefined: NationItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:20:16: undefined: CustomerItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:29:14: undefined: OrdersItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:33:5: undefined: OrdersItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:38:16: undefined: LineitemItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:43:5: undefined: LineitemItem
../../../tests/machine/x/go/group_by_multi_join_sort.go:51:21: undefined: Result
../../../tests/machine/x/go/group_by_multi_join_sort.go:68:15: undefined: v
../../../tests/machine/x/go/group_by_multi_join_sort.go:125:95: invalid operation: (float64(1) - (_getField(_getField(x, "l"), "l_discount")).(float64)) (value of type float64) is not an interface
../../../tests/machine/x/go/group_by_multi_join_sort.go:156:16: undefined: Result
../../../tests/machine/x/go/group_by_multi_join_sort.go:156:16: too many errors

1: //go:build ignore
